PCQ-1622 revert jvmArgs